--- a/Keras-Based.ipynb
+++ b/Keras-Based.ipynb
@@ -15,7 +15,6 @@
    "outputs": [],
    "source": [
     "# Импорт необходимых библиотек\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from keras.datasets import cifar10\n",
     "from keras.models import Sequential\n",
@@ -23,6 +22,25 @@
     "from keras.utils import to_categorical\n",
     "\n",
     "import ssl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вот список импортированных библиотек и их назначение:\n",
+    "\n",
+    "1. `matplotlib.pyplot`: Это модуль библиотеки Matplotlib, который используется для построения графиков и визуализации данных.\n",
+    "\n",
+    "2. `keras.datasets.cifar10`: Это модуль Keras, который предоставляет доступ к набору данных CIFAR-10. CIFAR-10 - это набор данных для классификации изображений, содержащий 60 000 цветных изображений размером 32x32, разделенных на 10 классов.\n",
+    "\n",
+    "3. `keras.models.Sequential`: Это класс Keras для создания последовательных моделей, где каждый слой имеет ровно один входной тензор и один выходной тензор.\n",
+    "\n",
+    "4. `keras.layers`: Этот модуль содержит классы для различных типов слоев, которые можно использовать в моделях Keras. В данном случае импортируются классы `Dense`, `Flatten`, `Conv2D` и `MaxPooling2D`.\n",
+    "\n",
+    "5. `keras.utils.to_categorical`: Это функция Keras, которая используется для преобразования вектора классов (целых чисел) в бинарную матрицу классов для использования в категориальной кросс-энтропии.\n",
+    "\n",
+    "6. `ssl`: Это модуль Python для работы с SSL и TLS. В контексте этого кода, он может быть использован для обхода проверки SSL при загрузке данных."
    ]
   },
   {
@@ -52,6 +70,21 @@
     "# Преобразование меток в категориальный формат\n",
     "train_labels = to_categorical(train_labels)\n",
     "test_labels = to_categorical(test_labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Пошаговое объяснение кода:\n",
+    "\n",
+    "1. `ssl._create_default_https_context = ssl._create_unverified_context`: Это строка кода используется для обхода ошибок SSL при загрузке данных из интернета. Это может быть необходимо, если сервер, с которым вы пытаетесь установить соединение, использует сертификат, который не может быть проверен вашей системой.\n",
+    "\n",
+    "2. `(train_images, train_labels), (test_images, test_labels) = cifar10.load_data()`: Эта строка кода загружает датасет CIFAR-10, который является набором из 60 000 цветных изображений размером 32x32, разделенных на 10 классов (по 6000 изображений на класс). Данные разделены на 50 000 изображений для обучения и 10 000 изображений для тестирования.\n",
+    "\n",
+    "3. `train_images = train_images.astype('float32') / 255` и `test_images = test_images.astype('float32') / 255`: Эти строки кода нормализуют значения пикселей изображений, преобразуя их из целых чисел от 0 до 255 в вещественные числа от 0 до 1. Это обычная практика при работе с изображениями в глубоком обучении, поскольку она помогает сети сходиться быстрее.\n",
+    "\n",
+    "4. `train_labels = to_categorical(train_labels)` и `test_labels = to_categorical(test_labels)`: Эти строки кода преобразуют метки классов из целочисленного формата (где каждому классу соответствует уникальное целое число) в категориальный формат (где каждому классу соответствует уникальный вектор, состоящий из нулей и одного единицы). Это делается для того, чтобы метки можно было использовать в функции потерь категориальной кросс-энтропии, которая обычно используется в задачах классификации."
    ]
   },
   {
@@ -201,6 +234,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Вот пошаговое объяснение кода:\n",
+    "\n",
+    "1. `model = Sequential()`: Создание последовательной модели Keras. Это линейный стек слоев, где каждый слой имеет ровно один входной тензор и один выходной тензор.\n",
+    "\n",
+    "2. `model.add(Conv2D(32, (3, 3), activation='relu', input_shape=(32, 32, 3)))`: Добавление сверточного слоя с 32 фильтрами размером 3x3 и функцией активации ReLU. `input_shape=(32, 32, 3)` указывает на размер входных данных: изображения размером 32x32 с 3 каналами цвета.\n",
+    "\n",
+    "3. `model.add(MaxPooling2D(pool_size=(2, 2)))`: Добавление слоя максимального пулинга, который уменьшает размерность входного изображения, сохраняя при этом наиболее важные признаки.\n",
+    "\n",
+    "4. `model.add(Conv2D(64, (3, 3), activation='relu'))`: Добавление еще одного сверточного слоя с 64 фильтрами и функцией активации ReLU.\n",
+    "\n",
+    "5. `model.add(Flatten())`: Преобразование двумерного массива в одномерный. Это необходимо для перехода от сверточных слоев к полносвязным.\n",
+    "\n",
+    "6. `model.add(Dense(64, activation='relu'))`: Добавление полносвязного слоя с 64 нейронами и функцией активации ReLU.\n",
+    "\n",
+    "7. `model.add(Dense(10, activation='softmax'))`: Добавление выходного слоя с 10 нейронами (по количеству классов) и функцией активации softmax, которая преобразует вектор в вероятностное распределение.\n",
+    "\n",
+    "8. `model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])`: Компиляция модели с оптимизатором Adam, функцией потерь категориальной кросс-энтропии (часто используется в задачах многоклассовой классификации) и метрикой точности.\n",
+    "\n",
+    "9. `model.summary()`: Вывод структуры модели, включая количество параметров на каждом слое."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Компиляция модели\n",
     "Скомпилируйте модель, указав оптимизатор, функцию потерь и метрики."
    ]
@@ -322,6 +380,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Вот пошаговое объяснение кода:\n",
+    "\n",
+    "1. `model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])`: Эта строка кода компилирует модель с определенными параметрами. \n",
+    "\n",
+    "   - `optimizer='adam'`: Adam - это алгоритм оптимизации, который используется для обновления весов в вашей модели в процессе обучения. Он сочетает в себе лучшие свойства двух других алгоритмов оптимизации, RMSProp и AdaGrad.\n",
+    "   \n",
+    "   - `loss='categorical_crossentropy'`: Категориальная кросс-энтропия - это функция потерь, которую обычно используют в задачах многоклассовой классификации. Она измеряет разницу между истинными и предсказанными вероятностями для каждого класса.\n",
+    "   \n",
+    "   - `metrics=['accuracy']`: Метрики используются для оценки производительности вашей модели. В данном случае используется точность, которая вычисляет процент правильных предсказаний модели.\n",
+    "\n",
+    "2. `model.summary()`: Эта строка кода выводит краткую сводку вашей модели. Она показывает каждый слой модели, его тип, форму вывода и количество параметров (весов). Это полезно для проверки архитектуры вашей модели и убедиться, что все слои имеют правильные размеры."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Обучение модели\n",
     "Обучите модель на обучающем наборе данных, используя метод fit()."
    ]
@@ -368,6 +443,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Вот пошаговое объяснение кода:\n",
+    "\n",
+    "1. `history = model.fit(train_images, train_labels, epochs=10, batch_size=64, validation_data=(test_images, test_labels))`: Эта строка кода обучает модель на обучающем наборе данных.\n",
+    "\n",
+    "   - `train_images, train_labels`: Это обучающие данные и соответствующие им метки.\n",
+    "\n",
+    "   - `epochs=10`: Эпоха - это один полный проход по всему обучающему набору данных. Здесь модель обучается в течение 10 эпох.\n",
+    "\n",
+    "   - `batch_size=64`: Размер пакета определяет количество обучающих примеров, используемых за одну итерацию обучения. Здесь за одну итерацию обучения используется 64 обучающих примера.\n",
+    "\n",
+    "   - `validation_data=(test_images, test_labels)`: Это данные для валидации модели после каждой эпохи. Валидационные данные не используются для обучения модели, они служат для проверки производительности модели на данных, которые она ранее не видела.\n",
+    "\n",
+    "2. `history`: Это объект, который возвращает функция `fit()`. Он содержит записи значений функции потерь и метрик модели на каждой эпохе обучения и валидации. Это полезно для анализа процесса обучения и определения, например, переобучается ли модель или недообучается."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Оценка модели\n",
     "Оцените производительность модели на тестовом наборе данных."
    ]
@@ -393,6 +487,25 @@
     "\n",
     "print('Test accuracy:', test_acc)\n",
     "print('Test loss:', test_loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вот пошаговое объяснение кода:\n",
+    "\n",
+    "1. `test_loss, test_acc = model.evaluate(test_images, test_labels)`: Эта строка кода оценивает производительность обученной модели на тестовом наборе данных. \n",
+    "\n",
+    "   - `model.evaluate()`: Этот метод в Keras оценивает производительность модели на предоставленных данных и метках. Он возвращает значение функции потерь и метрик, указанных при компиляции модели.\n",
+    "   \n",
+    "   - `test_images, test_labels`: Это тестовые данные и соответствующие им метки. Эти данные не использовались при обучении модели и служат для оценки того, как модель будет работать на новых, ранее не виденных данных.\n",
+    "\n",
+    "   - `test_loss, test_acc`: Это значения функции потерь и метрики точности, возвращаемые методом `evaluate()`. Функция потерь показывает, насколько предсказания модели отличаются от истинных меток, а точность показывает процент правильных предсказаний модели.\n",
+    "\n",
+    "2. `print('Test accuracy:', test_acc)`: Эта строка кода выводит точность модели на тестовом наборе данных.\n",
+    "\n",
+    "3. `print('Test loss:', test_loss)`: Эта строка кода выводит значение функции потерь модели на тестовом наборе данных."
    ]
   },
   {
