--- a/Torch-Based.ipynb
+++ b/Torch-Based.ipynb
@@ -28,6 +28,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Вот список импортированных библиотек и их назначение:\n",
+    "\n",
+    "1. `torch`: Это основная библиотека PyTorch, которая предоставляет основные функции для работы с тензорами и градиентами, а также инструменты для создания и обучения нейронных сетей.\n",
+    "\n",
+    "2. `torch.nn`: Этот модуль PyTorch содержит классы для создания слоев нейронных сетей. Он также предоставляет функции потерь и другие полезные утилиты.\n",
+    "\n",
+    "3. `torch.optim`: Этот модуль PyTorch содержит классы для различных алгоритмов оптимизации, которые можно использовать для обучения нейронных сетей, таких как SGD, Adam и другие.\n",
+    "\n",
+    "4. `torchvision`: Эта библиотека предоставляет доступ к популярным наборам данных, моделям и инструментам преобразования изображений для компьютерного зрения.\n",
+    "\n",
+    "5. `torchvision.transforms`: Этот модуль содержит классы для различных преобразований изображений, которые можно использовать для предварительной обработки и аугментации данных.\n",
+    "\n",
+    "6. `torch.nn.functional`: Этот модуль содержит функциональные версии различных операций, используемых в нейронных сетях, таких как функции активации, функции потерь и т.д.\n",
+    "\n",
+    "7. `ssl`: Это модуль Python для работы с SSL и TLS. В контексте этого кода, он может быть использован для обхода проверки SSL при загрузке данных."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Загрузка и предварительная обработка датасета cifar10\n",
     "Загрузите и предварительно обработайте датасет cifar10, используя torchvision."
    ]
@@ -72,6 +93,31 @@
     "# Классы в датасете cifar10\n",
     "classes = ('plane', 'car', 'bird', 'cat',\n",
     "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вот пошаговое объяснение кода:\n",
+    "\n",
+    "1. `transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])`: Это преобразование, которое будет применено к каждому изображению в наборе данных. \n",
+    "\n",
+    "   - `transforms.ToTensor()`: Это преобразует изображения в формат тензоров PyTorch, который можно использовать для обучения модели.\n",
+    "   \n",
+    "   - `transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))`: Это нормализует каждый тензор изображения, приводя все значения к диапазону от -1 до 1. Это обычно помогает улучшить процесс обучения.\n",
+    "\n",
+    "2. `ssl._create_default_https_context = ssl._create_unverified_context`: Это фикс для SSL, который позволяет загружать данные без проверки SSL сертификата.\n",
+    "\n",
+    "3. `trainset = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)`: Это загружает обучающий набор данных CIFAR10, применяя к каждому изображению указанное преобразование.\n",
+    "\n",
+    "4. `trainloader = torch.utils.data.DataLoader(trainset, batch_size=4, shuffle=True, num_workers=2)`: Это создает загрузчик данных, который можно использовать для итерации по обучающему набору данных во время обучения модели.\n",
+    "\n",
+    "5. `testset = torchvision.datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)`: Это загружает тестовый набор данных CIFAR10, применяя к каждому изображению указанное преобразование.\n",
+    "\n",
+    "6. `testloader = torch.utils.data.DataLoader(testset, batch_size=4, shuffle=False, num_workers=2)`: Это создает загрузчик данных, который можно использовать для итерации по тестовому набору данных при оценке модели.\n",
+    "\n",
+    "7. `classes = ('plane', 'car', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck')`: Это кортеж, содержащий имена классов в наборе данных CIFAR10."
    ]
   },
   {
@@ -125,6 +171,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Вот пошаговое объяснение кода:\n",
+    "\n",
+    "1. `class Net(nn.Module)`: Определение нового класса `Net`, который наследуется от `nn.Module`. `nn.Module` - это базовый класс для всех нейронных сетей в PyTorch.\n",
+    "\n",
+    "2. `def __init__(self)`: Это конструктор класса, который вызывается при создании нового объекта этого класса.\n",
+    "\n",
+    "3. `super(Net, self).__init__()`: Это вызов конструктора базового класса `nn.Module`.\n",
+    "\n",
+    "4. `self.conv1 = nn.Conv2d(3, 6, 5)`: Создание сверточного слоя с 3 входными каналами (предположительно, RGB-изображение), 6 выходными каналами и ядром свертки размером 5x5.\n",
+    "\n",
+    "5. `self.pool = nn.MaxPool2d(2, 2)`: Создание слоя максимального пулинга с размером окна 2x2.\n",
+    "\n",
+    "6. `self.conv2 = nn.Conv2d(6, 16, 5)`: Создание второго сверточного слоя с 6 входными каналами, 16 выходными каналами и ядром свертки размером 5x5.\n",
+    "\n",
+    "7. `self.fc1 = nn.Linear(16 * 5 * 5, 120)`: Создание полносвязного слоя с 16*5*5 входами (это размерность выхода предыдущего сверточного слоя) и 120 выходами.\n",
+    "\n",
+    "8. `self.fc2 = nn.Linear(120, 84)`: Создание второго полносвязного слоя с 120 входами и 84 выходами.\n",
+    "\n",
+    "9. `self.fc3 = nn.Linear(84, 10)`: Создание третьего полносвязного слоя с 84 входами и 10 выходами.\n",
+    "\n",
+    "10. `def forward(self, x)`: Это метод, который определяет, как будет происходить прямой проход по сети.\n",
+    "\n",
+    "11. `x = self.pool(F.relu(self.conv1(x)))`: Применение первого сверточного слоя, функции активации ReLU и слоя пулинга к входным данным.\n",
+    "\n",
+    "12. `x = self.pool(F.relu(self.conv2(x)))`: Применение второго сверточного слоя, функции активации ReLU и слоя пулинга к результату предыдущего шага.\n",
+    "\n",
+    "13. `x = x.view(-1, 16 * 5 * 5)`: Изменение формы тензора, чтобы его можно было передать в полносвязный слой.\n",
+    "\n",
+    "14. `x = F.relu(self.fc1(x))`, `x = F.relu(self.fc2(x))`, `x = self.fc3(x)`: Применение полносвязных слоев и функции активации ReLU.\n",
+    "\n",
+    "15. `net = Net()`: Создание экземпляра нейронной сети."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Определение функции потерь и оптимизатора\n",
     "Определите функцию потерь и оптимизатор, используя PyTorch."
    ]
@@ -141,6 +224,17 @@
     "\n",
     "# Используем стохастический градиентный спуск для оптимизации\n",
     "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вот пошаговое объяснение кода:\n",
+    "\n",
+    "1. `criterion = nn.CrossEntropyLoss()`: Создание объекта функции потерь. В данном случае используется кросс-энтропийная потеря, которая часто используется в задачах классификации. Эта функция сравнивает предсказания модели (вероятности для каждого класса) с истинными метками и вычисляет потери.\n",
+    "\n",
+    "2. `optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)`: Создание объекта оптимизатора. В данном случае используется стохастический градиентный спуск (SGD). Оптимизатор используется для обновления весов модели на основе градиентов, вычисленных во время обратного распространения ошибки. `net.parameters()` передает все параметры модели (веса и смещения) в оптимизатор. `lr=0.001` задает скорость обучения, которая определяет, насколько сильно обновляются веса на каждом шаге. `momentum=0.9` добавляет механизм импульса к SGD, который помогает ускорить оптимизацию и избежать застревания в локальных минимумах."
    ]
   },
   {
@@ -208,6 +302,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Вот пошаговое объяснение кода:\n",
+    "\n",
+    "1. `for epoch in range(2)`: Этот цикл проходит по датасету два раза (2 \"эпохи\"). Эпоха - это один полный проход по всему датасету.\n",
+    "\n",
+    "2. `running_loss = 0.0`: Здесь инициализируется переменная для отслеживания общих потерь во время обучения.\n",
+    "\n",
+    "3. `for i, data in enumerate(trainloader, 0)`: Этот цикл проходит по всем данным в `trainloader`. `trainloader` - это итератор, который предоставляет данные для обучения в мини-пакетах.\n",
+    "\n",
+    "4. `inputs, labels = data`: Здесь из каждого мини-пакета данных извлекаются входные данные (`inputs`) и соответствующие им метки (`labels`).\n",
+    "\n",
+    "5. `optimizer.zero_grad()`: Этот метод обнуляет градиенты всех параметров модели. Это важно делать перед каждым вызовом `loss.backward()`, иначе градиенты будут накапливаться.\n",
+    "\n",
+    "6. `outputs = net(inputs)`: Здесь происходит прямой проход: модель (`net`) применяется к входным данным (`inputs`), и получаются предсказания модели (`outputs`).\n",
+    "\n",
+    "7. `loss = criterion(outputs, labels)`: Здесь вычисляются потери, сравнивая предсказания модели (`outputs`) с истинными метками (`labels`).\n",
+    "\n",
+    "8. `loss.backward()`: Этот метод вычисляет градиенты потерь по всем параметрам модели (весам и смещениям).\n",
+    "\n",
+    "9. `optimizer.step()`: Этот метод обновляет все параметры модели, используя вычисленные градиенты. Это шаг оптимизации.\n",
+    "\n",
+    "10. `running_loss += loss.item()`: Здесь к общим потерям добавляются потери текущего мини-пакета.\n",
+    "\n",
+    "11. `if i % 2000 == 1999`: Это условие выполняется каждые 2000 мини-пакетов.\n",
+    "\n",
+    "12. `print('[%d, %5d] loss: %.3f' % (epoch + 1, i + 1, running_loss / 2000))`: Здесь печатается средняя потеря за последние 2000 мини-пакетов.\n",
+    "\n",
+    "13. `running_loss = 0.0`: Здесь общие потери обнуляются, чтобы начать отслеживание для следующих 2000 мини-пакетов.\n",
+    "\n",
+    "14. `print('Finished Training')`: Это сообщение выводится, когда обучение завершено."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Тестирование модели\n",
     "Протестируйте модель на тестовом наборе данных и оцените ее производительность."
    ]
@@ -252,6 +381,35 @@
     "# Выводим процент правильных предсказаний\n",
     "print('Accuracy of the network on the 10000 test images: %d %%' % (\n",
     "    100 * correct / total))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вот пошаговое объяснение кода:\n",
+    "\n",
+    "1. `import torch`: Импорт библиотеки PyTorch, которая используется для обучения и тестирования нейронных сетей.\n",
+    "\n",
+    "2. `net.eval()`: Перевод модели в режим оценки (или тестирования). В этом режиме PyTorch отключает некоторые функции, такие как dropout и batch normalization, которые используются во время обучения.\n",
+    "\n",
+    "3. `correct = 0` и `total = 0`: Инициализация счетчиков для отслеживания общего числа предсказаний и числа правильных предсказаний.\n",
+    "\n",
+    "4. `with torch.no_grad()`: В этом блоке PyTorch не будет вычислять градиенты. Это ускоряет вычисления и снижает потребление памяти, поскольку градиенты не нужны во время тестирования.\n",
+    "\n",
+    "5. `for data in testloader`: Цикл по всем данным в `testloader`. `testloader` - это итератор, который предоставляет тестовые данные в мини-пакетах.\n",
+    "\n",
+    "6. `images, labels = data`: Из каждого мини-пакета данных извлекаются изображения и соответствующие им метки.\n",
+    "\n",
+    "7. `outputs = net(images)`: Прямой проход: модель (`net`) применяется к изображениям, и получаются предсказания модели.\n",
+    "\n",
+    "8. `_, predicted = torch.max(outputs.data, 1)`: Получение предсказанных классов. `torch.max` возвращает максимальное значение и индекс максимального значения по указанной оси (в данном случае, ось 1, что соответствует классам).\n",
+    "\n",
+    "9. `total += labels.size(0)`: Обновление общего числа предсказаний.\n",
+    "\n",
+    "10. `correct += (predicted == labels).sum().item()`: Обновление числа правильных предсказаний. `(predicted == labels)` возвращает тензор булевых значений, где `True` соответствует правильным предсказаниям. `.sum().item()` суммирует все `True` значения и возвращает их как обычное число.\n",
+    "\n",
+    "11. `print('Accuracy of the network on the 10000 test images: %d %%' % (100 * correct / total))`: Вывод процента правильных предсказаний (точности) на тестовых данных."
    ]
   }
  ],
